# google-takeout-to-sqlite

./: .gitignore  .tool-versions  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: build_and_publish.yml
google_takeout_to_sqlite/: cli.py  utils.py
tests/: test_create_zip.py  test_gmail_import.py  test_location_history.py  test_my_activity.py  utils.py
tests/mbox_contents/: small.gmail.mbox
tests/my_activity/Takeout/My Activity/Google Play Books/: My Activity.json
tests/zip_contents/Takeout/Location History/: Location History.json
tests/zip_contents/Takeout/My Activity/Maps/: My Activity.json
tests/zip_contents/Takeout/My Activity/Search/: My Activity.json
