[tool.poetry]
name = "google-takeout-to-sqlite"
version = "0.2"
description = "Save data from Google Takeout to a SQLite database"
authors = ["Simon Willison <swillison@gmail.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
homepage = "https://github.com/dogsheep/google-takeout-to-sqlite"
keywords = [
  "google",
  "sqlite",
  "datasette",
  "dogsheep",
  "datasette-io",
  "datasette-tool",
]

[tool.poetry.dependencies]
python = "^3.6"
sqlite-utils = "~1.11"

[tool.poetry.dev-dependencies]
pytest = "^4.6.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
google-takeout-to-sqlite = "google_takeout_to_sqlite.cli:cli"
